add lines strategy

--- a/app/assets/javascripts/client/templates/template_modal.html.haml
+++ b/app/assets/javascripts/client/templates/template_modal.html.haml
@@ -24,10 +24,8 @@
             %select.form-control{"ng-model"=>"template.strategy"}
               %option{"value"=>""} -- выбор стратегии --
               %option{"value"=>"default"} обычная
-              %option{"value"=>"sell"} только продавать
-              %option{"value"=>"quick_sell"} быстрая продажа
-              %option{"value"=>"rank_volume"} сортировка по рангу
-              %option{"value"=>"trend_trade"} торговля от тренда
+              %option{"value"=>"only_sell"} продать все
+              %option{"value"=>"lines"} lines
 
         .col-xs
           .form-group
